elasticsearch/ingress-elastic.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: elastic-ingress
spec:
  routes:
    - kind: Rule
      match: Host(`elastic.wgbh-mla.org`)
      services:
        - kind: Service
          name: quickstart-es-http
          port: 9200
  tls:
    secretName: elasticsearch-tls
