elasticsearch/ingress-search.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: kibana-ingress-staging
 annotations:
   cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: traefik
  tls:
   - hosts:
       - search.wgbh-mla.org
     secretName: kibana-tls-staging
  rules:
   - host: search.wgbh-mla.org
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: quickstart-kb-http
               port:
                 number: 5601
